<resources>
    <string name="app_name">SPEANT</string>
    <string name="skip_login">Skip >></string>
    <string name="login_note">Enter your registered phone number or Email to continue Login</string>
    <string name="hint_email">Email/Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_note">Enter your registered phone number \nGet OTP Verification</string>
    <string name="verification_note">Please enter the verification code send to</string>
    <string name="new_pswd_note">Enter Your new Password and Confirm the Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="rs">$</string>
    <string name="bullets">\u2022</string>
    <string name="newline">\n</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="enter_the_5_digit_code_sent_to_you_at">Enter the 5-digit code sent to you at</string>
    <string name="enter_new_password_to_continue">Enter new password to continue</string>
    <string name="did_you_enter_the_correct_mobile_number">Did you enter the correct mobile number?</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="welcome_enter_your_password_to_continue">Welcome, enter your password to continue</string>
    <string name="create_your_account_password">Create your account password</string>
    <string name="use_your_boga_account_to_get_started">Use your Speant account to get started</string>
    <string name="note_for_demo_purpose_we_ve_pre_filled_the_otp">Note : For demo purpose we\'ve pre-filled the OTP</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="relevance">Relevance</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="minimum_length">Minimum Password length should be 8</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="enter_valid_OTP">Enter Valid OTP</string>
    <string name="enter_your_password">Enter Valid Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="referal_txt"><![CDATA[Refer a friend & we\'ll give you & Your buddy Rs. 100 off on your next order above Rs. 299]]></string>
    <string name="title_activity_old_login">ActivityOldLogin</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="about_us"> Speant is the online food ordering script with multiple striking rich features. Speant is simple and convenient to experience user-friendliness. Highly scale-able and rich quality script is the reason behind the distinctive exclusiveness.\n\n The most important trait is our clone script is reliable as well as customizable according to the business requirements. Undeniably Speant will meet all the requirements to commence your online food ordering business</string>
    <string name="faq"><![CDATA[FAQ : \n\n1.How can I subscribe to Speant SUPER? We are currently doing a pilot for Speant SUPER. We will enable SUPER for you, very very soon! \n\n 2.I want to renew SUPER. How do I do it? It is simple - head to Account > My Account > Food SUPER and click on \'Stay SUPER\' to renew your membership. You will be able to renew only a few days before your current SUPER plan expires / anytime after your plan expires. \n\n  3.How do I cancel my SUPER membership? Once you are a SUPER member, you can not cancel it. In the case that you cancel the order with which you purchased SUPER, your membership will also be cancelled and refunded.]]></string>
    <string name="txt_load_web">Are you sure? You want to load this page?</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="link_account">Link Account</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="hundred">100</string>
    <string name="five_hundred">500</string>
    <string name="thousand">1000</string>
    <string name="two_thousand">2000</string>
    <string name="coup_tit">Get 50% Off on first 3 Food Deliver</string>
    <string name="coup_desc_dum">Use Coupon code: August5615 and get 50% off on first 3 food delivery</string>
    <string name="more_details">More Details</string>
    <string name="ok_got_it">Ok, Got IT</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="more_restaurants_near_you">More Restaurants Near you</string>
    <string name="popular_brands">Popular Brands</string>
    <string name="nearby_restaurants">Nearby Restaurants</string>
    <string name="select_card">Select Card</string>
    <string name="expires">Expires</string>
    <string name="add_card_st">Add Card</string>
    <string name="clear_cart">Food is from different restaurant.Are you sure you want to clear the cart?</string>
    <string name="fetching_adddress">Fetching Adddress...</string>
    <string name="place_order">Place Order</string>
    <string name="login">Login</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="getting_card_token_failed">Getting Card Token! Please Wait</string>
    <string name="adding_card_please_wait">Adding Card ! Please Wait</string>
    <string name="card_added_successfully">Card Added Successfully</string>
    <string name="service_failed">Service Failed</string>
    <string name="payment">Payment</string>
    <string name="online_change">OnlineChange</string>
    <string name="signal_change">SignalChange</string>
    <string name="connection_is_slow">Network Connection is slow!</string>
    <string name="gps_is_disabled">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="go_to_settings">Goto Settings Page To Enable GPS</string>
    <string name="ok">OK</string>
    <string name="enable">Enable</string>
    <string name="no">No</string>
    <string name="enable_permission">Enable Permissions to access the app</string>
    <string name="no_cards_added">No Cards Added</string>
    <string name="default_card_changed_successfully">DefaultCard Changed Successfully</string>
    <string name="card_deleted">Card Deleted SuccessFully</string>
    <string name="addOns">AddOns :</string>
    <string name="quantity">Quantity :</string>
    <string name="item">Item</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="replace_cart_item">Replace Cart Item</string>
    <string name="yes">Yes</string>
    <string name="help">Help</string>
    <string name="no_order_history">No order History found</string>
    <string name="order_created">ORDER CREATED</string>
    <string name="restaurant_accepted">RESTAURANT ACCEPTED</string>
    <string name="food_preparing">FOOD BEING PREPARED</string>
    <string name="order_assigned">ORDER ASSIGNED</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="currently_unserviceable">Currently Unserviceable</string>
    <string name="offer">Offer</string>
    <string name="having_different_addons">Having Different Addon Groups</string>
    <string name="unable_to_remove">Unable to Remove</string>
    <string name="view_cart">View Cart</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="enter_mobile_number">Enter Valid Mobile Number</string>
    <string name="verify_number">Verify Your Phone Number</string>
    <string name="enter_mail">Enter Valid Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_otp">Get OTP</string>
    <string name="next">Next</string>
    <string name="network_not_found">Network not found</string>
    <string name="getting_otp">Generating OTP.Please Wait</string>
    <string name="enter_otp">Enter Valid OTP</string>
    <string name="email_not_found">Email not found.Try another Login</string>
    <string name="mobile_not_found">Mobile Number not found.Try another Login</string>
    <string name="enter_password">Enter Valid Password</string>
    <string name="exit">Exit</string>
    <string name="are_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="offers">Offers</string>
    <string name="skip">skip</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_desc">Enable GPS to get your Accurate location</string>
    <string name="permission">Permission</string>
    <string name="allow_location_permission">Allow Location Permission</string>
    <string name="please_enable_location">Please Enable Location</string>
    <string name="select_payment">Select Payment</string>
    <string name="pay">Pay</string>
    <string name="bill_detail_not_received">Bill details are not received</string>
    <string name="guest_user">GUEST USER</string>
    <string name="login_to_view">Login to view details</string>
    <string name="are_you_want_to_logout">Are You sure you want to logout?</string>
    <string name="signout">SIGNOUT</string>
    <string name="recharge_food_credit">Recharge Food Credits</string>
    <string name="enter_recharge_amount">Enter Recharge Amount</string>
    <string name="order_hash">Order #</string>
    <string name="accepted_order_and_on_the_way">has accepted your order and on the way to the restaurant</string>
    <string name="reached_restaurant">has reached the restaurant</string>
    <string name="collected_order">collected your order and on the way to deliver</string>
    <string name="delivered_order">delivered your order</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="no_rest_available">No Restaurant Available</string>
    <string name="no_service_head">Don\'t be mad at us…</string>
    <string name="no_service_desc">we don\'t deliver in your area YET\,but we will be expanding real soon!</string>
    <string name="other_valid_till">Other valid till</string>
    <string name="offer_term"><![CDATA[Other T&Cs may apply]]></string>
    <string name="valid_android_app">Offer valid on android app</string>
    <string name="valid">Valid</string>
    <string name="time_per_user">time per user</string>
    <string name="profile_update_success">Profile Updated Successfully</string>
    <string name="select_delivery_type">Delivery Type</string>
    <string name="members">Members</string>
    <string name="select_time">Select Time</string>
    <string name="restaurant_pickup">Self Pickup</string>
    <string name="dine_booking">Table Booking</string>
    <string name="door_delivery">Door Delivery</string>
    <string name="go_out">Go Out</string>
    <string name="how_many_people">How Many People ?</string>
    <string name="what_day">What Day ?</string>
    <string name="what_time">What Time ?</string>
    <string name="dine_date_time">Select your Date and Time for Dining</string>
    <string name="select_delivery">Select your Delivery Type</string>
    <string name="booking_details">Booking Details</string>
    <string name="cash_on_delivery">Cash onDelivery</string>
    <string name="pay_by_card">Pay by Card</string>
</resources>