<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_close_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_clear"
        android:layout_marginLeft="@dimen/xxhdpi_10"
        android:paddingTop="@dimen/xxhdpi_30"
        android:paddingLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/signup_close_img"
        android:padding="@dimen/xxhdpi_20">

        <TextView
            android:id="@+id/signup_welcon_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create an Account ?"
            android:textColor="@color/black"
            android:textSize="@dimen/t_xxh_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xxhdpi_30"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:text="@string/login_note"
            android:textColor="@color/grey"
            android:textSize="@dimen/t_xxh_16" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_phone_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phone_number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/t_xxh_20" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_mail_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/t_xxh_20" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_pswd_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xxhdpi_10"
            android:layout_marginRight="@dimen/xxhdpi_10"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:fastScrollEnabled="true"
            card_view:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/signup_submit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/xxhdpi_10"
                android:text="signup"
                android:textColor="@color/white"
                android:textSize="@dimen/t_xxh_20"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>