<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grey_bg_rect"
    android:layout_margin="@dimen/xxhdpi_10"
    android:padding="@dimen/xxhdpi_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_coup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_light"
            android:lineSpacingExtra="13sp"
            android:text="Coupon Code :"
            android:paddingEnd="@dimen/xxhdpi_10"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/t_xxh_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_coup_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:lineSpacingExtra="13sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txt_coup"
            android:text="AUGUST50"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/t_xxh_22" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_coup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:layout_marginTop="@dimen/xxhdpi_10"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginBottom="@dimen/xxhdpi_10"
        android:text="@string/coup_tit"
        android:textColor="@color/black"
        android:textSize="@dimen/t_xxh_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_coup_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_light"
        android:maxLines="3"
        android:ellipsize="end"
        android:lineSpacingExtra="5sp"
        android:layout_marginBottom="@dimen/xxhdpi_10"
        android:text="@string/coup_desc_dum"
        android:textColor="@color/grey"
        android:textSize="@dimen/t_xxh_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_moredet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:lineSpacingExtra="13sp"
        android:text="@string/more_details"
        android:layout_marginTop="@dimen/xxhdpi_10"
        android:textColor="@color/black"
        android:textSize="@dimen/t_xxh_12" />



</LinearLayout>